# historical-buildings-facade-damage-assessment

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/input/: 402_buildings_addresses_coords.csv
data/input/ranking-dataset/: ranking_pairs_coating_deterioration.csv  ranking_pairs_masonry_degradation.csv  ranking_pairs_moisture_bio_damage.csv  ranking_pairs_vandalism.csv
data/interim/: building_features_402-32d-b2.csv  facade_damage_scores_lr_4classes-b2.csv  gnn_results_v2.csv
data/interim/gnn-validation/: 83-buildings-indices.csv  building_features_83-32d.csv
models/: gnn_gat_similarity_k4.pt  gnn_sage_spatial_k10.pt  lr_models.pkl  lr_scalers.pkl
notebooks/: 2.1.2 kaggle-segmentator-inference.ipynb  2.2.1 ranking-data-labelling.ipynb  2.3.1 GNN-data-preparation.ipynb  3.1-kaggle-segmentator-training.ipynb  3.2 facade-damage-ranking-logreg.ipynb  3.4 GNN-experiments.ipynb  inspector.ipynb
scripts/: calculate_stats.py  create_damage_map.py  create_labeled_buildings_map.py  download_screenshots.py  export_rgb_masks.py  merge_datasets.py  visualize_graphs.py
