[project]
name = "historical-buildings-facade-damage-assessor"
version = "0.1.0"
description = "Автоматическая оценка повреждений фасадов исторических зданий"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "torch-geometric>=2.5",
    "albumentations>=1.4",
    "opencv-python>=4.9",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "geopandas>=0.14",
    "folium>=0.16",
    "osmnx>=1.9",
    "optuna>=3.6",
    "wandb>=0.17",
    "pillow>=10.0",
    "tqdm>=4.66",
    "notebook>=7.0",
    "ipywidgets>=8.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29",
]